# labor06

./: CMakeLists.txt  CPack.cmake  CPackConfig.cmake  DESCRIPTION  LICENSE  README.md
hello_world_application/: CMakeLists.txt
solver_lib/: solver.cpp
